--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "react-rel-pdfviewer-wrapper",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "private": false,
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
+  },
+  "description": "react pdfviewer wrapper",
+  "module": "dist/PDFresultModal.js",
+  "main": "dist/PDFresultModal.js",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-draggable": "^4.4.3",
+    "react-rel-pdfviewer": "^1.0.11"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "rmdir dist /s /q && mkdir dist && babel src/lib -d dist --copy-files",
+    "deploy_npm": "npm version patch && npm publish"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +37,33 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "keywords": [
+    "react",
+    "pdfviewer"
+  ],
+  "author": "guripong",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bnri/react-rel-pdfviewer-wrapper.git"
+  },
+  "peerDependencies": {
+    "react": ">= 17",
+    "react-dom": ">= 17"
+  },
+  "engines": {
+    "node": ">= 14"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/preset-react": "^7.16.7",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4"
   }
 }
