--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "module": "dist/PDFresultModal.js",
   "main": "dist/PDFresultModal.js",
   "dependencies": {
+    "pdf-lib": "^1.17.1",
     "react-draggable": "^4.4.3",
     "react-rel-pdfviewer": "^1.0.11"
   },
