--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "module": "dist/PDFresultModal.js",
   "main": "dist/PDFresultModal.js",
   "dependencies": {
+    "@pdf-lib/fontkit": "^1.1.1",
     "pdf-lib": "^1.17.1",
     "react-draggable": "^4.4.3",
-    "react-rel-pdfviewer": "^1.0.13"
+    "react-rel-pdfviewer": "^1.0.13",
+    "react-tooltip": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
