--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     ]
   },
   "description": "react pdfviewer wrapper",
-  "module": "dist/PDFresultModal.js",
-  "main": "dist/PDFresultModal.js",
+  "module": "dist/index.js",
+  "main": "dist/index.js",
   "dependencies": {
     "@pdf-lib/fontkit": "^1.1.1",
     "pdf-lib": "^1.17.1",
     "react-color": "^2.19.3",
     "react-draggable": "^4.4.3",
+    "react-rel-pdfviewer": "^1.0.23",
     "react-tooltip": "^4.4.2"
   },
   "scripts": {
