--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-rel-pdfviewer-wrapper",
-  "version": "1.0.22",
+  "version": "1.0.22-1",
   "private": false,
   "babel": {
     "presets": [
