--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "main": "dist/PDFresultModal.js",
   "dependencies": {
     "@pdf-lib/fontkit": "^1.1.1",
+    "heatmap.js": "^2.0.5",
     "pdf-lib": "^1.17.1",
     "react-color": "^2.19.3",
     "react-draggable": "^4.4.3",
-    "react-rel-pdfviewer": "^1.0.25",
+    "react-rel-pdfviewer": "^1.0.30",
     "react-tooltip": "^4.4.2"
   },
   "scripts": {
